objects/Transaction__x.object
<CustomObject>
    <fields>
        <fullName>COMPANYNAME__c</fullName>
        <description>COMPANYNAME</description>
        <externalDeveloperName>COMPANYNAME</externalDeveloperName>
        <label>COMPANYNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMPENSATIONDATE__c</fullName>
        <description>COMPENSATIONDATE</description>
        <externalDeveloperName>COMPENSATIONDATE</externalDeveloperName>
        <label>COMPENSATIONDATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CREDITVALUE__c</fullName>
        <description>CREDITVALUE</description>
        <externalDeveloperName>CREDITVALUE</externalDeveloperName>
        <label>CREDITVALUE</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CUSTOMERID__c</fullName>
        <description>CUSTOMERID</description>
        <externalDeveloperName>CUSTOMERID</externalDeveloperName>
        <label>CUSTOMERID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVENTTYPEID__c</fullName>
        <description>EVENTTYPEID</description>
        <externalDeveloperName>EVENTTYPEID</externalDeveloperName>
        <label>EVENTTYPEID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOOFUNITS__c</fullName>
        <description>NOOFUNITS</description>
        <externalDeveloperName>NOOFUNITS</externalDeveloperName>
        <label>NOOFUNITS</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPPORTUNITYID__c</fullName>
        <description>OPPORTUNITYID</description>
        <externalDeveloperName>OPPORTUNITYID</externalDeveloperName>
        <label>OPPORTUNITYID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYEEID__c</fullName>
        <description>PAYEEID</description>
        <externalDeveloperName>PAYEEID</externalDeveloperName>
        <label>PAYEEID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCTNAME__c</fullName>
        <description>PRODUCTNAME</description>
        <externalDeveloperName>PRODUCTNAME</externalDeveloperName>
        <label>PRODUCTNAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <description>STATUS</description>
        <externalDeveloperName>STATUS</externalDeveloperName>
        <label>STATUS</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRANSACTIONID__c</fullName>
        <description>TRANSACTIONID</description>
        <externalDeveloperName>TRANSACTIONID</externalDeveloperName>
        <label>TRANSACTIONID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRANSACTIONVALUE__c</fullName>
        <description>TRANSACTIONVALUE</description>
        <externalDeveloperName>TRANSACTIONVALUE</externalDeveloperName>
        <label>TRANSACTIONVALUE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITTYPEFORVALUE__c</fullName>
        <description>UNITTYPEFORVALUE</description>
        <externalDeveloperName>UNITTYPEFORVALUE</externalDeveloperName>
        <label>UNITTYPEFORVALUE</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>